# FlagScale

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  CODEOWNERS  LICENSE  README.md  README_ROBOTICS.md  __init__.py  calculate_throughput.py  changed_files.txt  deploy_to_remote.sh  find_gems.sh  finetune_aquila.py  go.sh  gpu_health_check.py  hostfile.4  log03311916  mem.sh  pi0_infer.py  predefined_args_megatron.json  pretrain_gpt.py  pyproject.toml  requirements.txt  requirements_dev.txt  run.py  run.sh  run_dev_howto.sh  run_dev_story.sh  run_dev_x2i.sh  run_emu.sh  run_howto.sh  run_story.sh  run_train.sh  run_x2i.sh  setup.py  stop_train.sh  test_mock.py  version.py
flagscale/backends/omniinfer/: LICENSE  README.md  Third Party Open Source Software Notice  pyproject.toml
flagscale/backends/omniinfer/infer_engines/: bash_install_code.sh  bash_install_code_optimization.sh  bash_install_mock.sh  bash_install_mock_no_npus.sh
flagscale/backends/omniinfer/infer_engines/vllm/vllm/: _version.py  config.py  forward_context.py
flagscale/backends/omniinfer/infer_engines/vllm/vllm/distributed/: parallel_state.py
flagscale/backends/omniinfer/infer_engines/vllm/vllm/engine/: arg_utils.py
flagscale/backends/omniinfer/infer_engines/vllm/vllm/v1/: request.py
flagscale/backends/omniinfer/omni/accelerators/cache/v0_6/: omni_attn.py
flagscale/backends/omniinfer/omni/accelerators/cache/v0_8/: kv_cache_interface.py  kv_cache_manager.py
flagscale/backends/omniinfer/omni/accelerators/pd/: __init__.py  llmdatadist_connector_v1.py  llmdatadist_manager.py  utils.py
flagscale/backends/omniinfer/omni/accelerators/pd/ranktable/: device.py  local_info.py  rank_table.py
flagscale/backends/omniinfer/omni/accelerators/placement/: MANIFEST.in  README.md  build.sh  config.yaml  requirements.txt  setup.py
flagscale/backends/omniinfer/omni/accelerators/placement/omni_planner/: LICENSE  cluster_status.py  config.py  expert_mapping.py  omni_planner.py  placement_handler.py  utils.py
flagscale/backends/omniinfer/omni/accelerators/placement/scripts/: copy_dsv3_to_vllm_npu.sh  copy_vllm_npu_to_dsv3.sh  require.sh  require_profile.sh  start_benchmark_tools.sh  start_docker.sh  start_ray.sh  start_ray_all2all.sh  start_ray_all2all_worker.sh  start_ray_profile.sh  start_serving.sh  start_serving_all2all.sh  start_serving_profile.sh
flagscale/backends/omniinfer/omni/accelerators/placement/tests/: __init__.py  config_empty.yaml  config_heat.yaml  config_none_redundant.yaml  config_test.yaml  test_ada_router_optimizer.py  test_expert_activation.py  test_expert_balance.py  test_expert_mapping.py  test_heat_optimizer.py  test_moe_weights.py  test_omni_planner.py  test_redundant_experts_optimizer.py  test_resdispatch.py  test_token_balance_optimizer.py
flagscale/backends/omniinfer/omni/accelerators/sched/global_proxy/: README.md  build.sh  global_proxy.sh
flagscale/backends/omniinfer/omni/adaptors/vllm/: envs.py  platform.py  utils.py
flagscale/backends/omniinfer/omni/adaptors/vllm/distributed/: communication_op.py  communicator.py  parallel_state.py
flagscale/backends/omniinfer/omni/adaptors/vllm/patches/: all_reduce_optimization.patch  async_schedule_update_output.patch  bug_fix.patch  manual_apiserver_scaleout.patch  model_patch.py  mtp.patch  null_value_handling.patch  patch_support_trans_prefilled_token_to_decode_instance.patch  scheduler.patch  tokenizer_proc_pool.patch  vllm_all_to_all.patch  (+2 more)
flagscale/backends/omniinfer/omni/cli/: __init__.py  config_transform.py  main.py  omni_infer_deployment.yml  omni_infer_inventory.yml  omni_infer_server.yml
flagscale/backends/omniinfer/omni/models/: __init__.py
flagscale/backends/omniinfer/omni/models/deepseek/: deepseek_mtp.py  deepseek_v2.py  deepseek_v3.py
flagscale/backends/omniinfer/omni/ops/: __init__.py  activation.py  attention.py  cache.py  common_fused_moe.py  fused_moe.py  layernorm.py  rotary_embedding.py  vocab_parallel_embedding.py
flagscale/backends/omniinfer/omni/quantization/: quant_config.py  quantizer.py
flagscale/backends/omniinfer/omni/quantization/compressed_tensors/: compressed_tensors_linear.py  compressed_tensors_moe.py
flagscale/backends/omniinfer/tests/: README.md  conftest.py  env.sh  install.sh  log_utils.sh  mark_utils.py  reduce_the_num_of_hidden_layers_of_deepseek_v3_w8a8.patch  requirements-ci.txt  requirements.txt  start_tests.sh
flagscale/backends/omniinfer/tests/models/deepseek/: deepseek_r1.yml
flagscale/backends/omniinfer/tests/perf_test/bencnmark/: mock_model_env.sh  start_benchmark.sh  start_benchmark_constant_length.sh  start_benchmark_constant_length_comm.sh  start_benchmark_long_term_stability.sh  start_benchmark_long_term_stability_comm.sh  start_vllm_server.sh  test_mock_model_benchmark.py
flagscale/backends/omniinfer/tests/st/: start_st.sh  test_qwen.sh
flagscale/backends/omniinfer/tests/st/cloud_tests_imp/: README.md  __init__.py  conftest.py  main.py  pytest.ini  run_test_cloud.sh  test_excel.py
flagscale/backends/omniinfer/tests/st/precision/: test_precision.py  test_r1_precision.py
flagscale/backends/omniinfer/tests/st/scripts/: utils.py
flagscale/backends/omniinfer/tests/st/simple_evals/: README_vllm.md  build.sh  common.py  drop_eval.py  eval_types.py  gpqa_eval.py  humaneval_eval.py  math_eval.py  mgsm_eval.py  mmlu_eval.py  run_multilingual_mmlu.py  run_simple_eval.sh  simple_evals.py  simple_evals_for_vllm.patch  simpleqa_eval.py
flagscale/backends/omniinfer/tests/st/test_api_service/: test_api.py
flagscale/backends/omniinfer/tests/st/test_edit_distance/: test_edit_distance.py
flagscale/backends/omniinfer/tests/st/test_from_cloud/: test_cloud.py
flagscale/backends/omniinfer/tests/start_vllm_server/: deepseek_dp8_tp1_ep1.sh  qwen_dp1_tp1.sh  qwen_dp8_tp1.sh
flagscale/backends/omniinfer/tests/test_config/: test_config_decode.json  test_config_prefill.json
flagscale/backends/omniinfer/tests/test_framework/vllm_mock/: .gitignore  README.md  vllm_ascend.patch  vllm_ascend_no_npu.patch  vllm_commit_id_1ff751ca17a58ad3877f25eca440d74a97d6cc64.patch
(+5243 files in other folders)
