[build-system]
requires = ["setuptools>=77.0", "wheel", "gitpython"]
build-backend = "custom_build_backend.flagscale_build_backend"

[tool.black]
line-length = 100
skip_string_normalization = true
skip_magic_trailing_comma = true

[tool.isort]
line_length = 100
profile = "black"
use_parentheses = true
skip_gitignore = true
combine_as_imports = true
lines_between_types = 1
known_local_folder = ["flagscale"]
known_first_party = ["megatron", "vllm"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"
